--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,10 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jgrapht-1.0.0/jgrapht-core-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-1.0.0/jgrapht-core-1.0.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/GA_VONE/lib/jgrapht-1.0.0.zip!/jgrapht-1.0.0/javadoc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
