--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_101">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_112">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jgrapht-1.0.0/jgrapht-core-1.0.0.jar" sourcepath="lib/jgrapht-1.0.0.zip">
+	<classpathentry kind="lib" path="lib/jgrapht-1.0.0/jgrapht-core-1.0.0.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/GA_VONE/lib/jgrapht-1.0.0.zip!/jgrapht-1.0.0/javadoc"/>
 		</attributes>
